# Conteiner module 2 and 3 column views fixed to display correctly.
# Turned off user tracking for performance reasons and lack of implimentation.
# "Siblings and Current Children" view added for navigation module.
# Many Internet Explorer bug fixes
# Removal of YUI PHP loader to calculate YUI JS dependencies.
# Migration scripts added for pages, files, and a handfule of modules.
# Added support for placing datatypes inside a module's directory



Added / Fixed / changed for 2.0.0 Preview Release 2
-----------------------
# Attachable Items are no longer included “for free” when instantiating expRecord and subclasses (for speed and optimization). It’s now up to the developer to specify the particular attachable item types in the $attachable_item_types array.
# No longer toggling magnification upon toggling upon toggling error reporting (DEVELOPMENT, 1). “Toggle Minify” is now located in the Slingbar under Exponent > Developer Tools > Toggle Minify.
# Minified Style Sheets are no longer stored in tmp/css/exp-styles-min.css. Exponent now uses the built-in caching system built in to Minify.
# No longer reading CSS files from themes/common/css
# Core system assets (css, images, javascript) are now located in framework/core/assets
# Module assets are kept in framework/modules/$module/assets/[css/javascript/images]
# PHP YUI Loader is now used to calculate YUI 2 and 3 dependencies on the server-side, rather than the YUI JS Loader.
# exponent_theme_headerInfo() has been deprecated for expTheme::head().
# The $config array passed to expTheme::head($config) has changed.
# exponent_theme_main() has been deprecated in favor of expTheme::main();
# exponent_theme_showModule(), exponent_theme_showSectionalModule(), exponent_theme_showTopSectionalModule(), and expTheme::showController() have all been deprecated in favor of expTheme::module();
# The Default WYSIWYG Editor has been changed to CKEditor.