@@ -1,0 +1,12 @@
+# Excludes all files within the ./ files directory
+/files/*
+
+# Excludes the site's configuration file
+/conf/config.php
+
+#excludes cache files
+/tmp/*
+
+#excludes .htaccess file
+/.htaccess
+
